feat: introduce cloud version 2 (#1501)
### Motivation
Cloud version 2 was released and we should use it now.

### Modification
Updated the fork & the implementation of cloud in cloudnet.

### Result
Cloud 2.0 is used.