@@ -16,11 +16,7 @@
 
 package eu.cloudnetservice.node.command.defaults;
 
-import cloud.commandframework.CommandManager;
-import cloud.commandframework.annotations.AnnotationParser;
-import cloud.commandframework.extra.confirmation.CommandConfirmationManager;
-import cloud.commandframework.meta.CommandMeta;
-import cloud.commandframework.meta.SimpleCommandMeta;
+import com.github.benmanes.caffeine.cache.Caffeine;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Multimaps;
 import com.google.common.collect.SetMultimap;
@@ -56,6 +52,7 @@ import eu.cloudnetservice.node.console.handler.ConsoleTabCompleteHandler;
 import io.leangen.geantyref.TypeToken;
 import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -67,8 +64,16 @@ import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionException;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.TimeUnit;
 import lombok.NonNull;
+import org.incendo.cloud.CommandManager;
+import org.incendo.cloud.annotations.AnnotationParser;
+import org.incendo.cloud.key.CloudKey;
+import org.incendo.cloud.meta.CommandMeta;
+import org.incendo.cloud.processors.cache.CaffeineCache;
+import org.incendo.cloud.processors.confirmation.ConfirmationConfiguration;
+import org.incendo.cloud.processors.confirmation.ConfirmationManager;
+import org.incendo.cloud.processors.confirmation.annotation.ConfirmationBuilderModifier;
+import org.incendo.cloud.suggestion.Suggestion;
 import org.jetbrains.annotations.Nullable;
 
 /**
@@ -78,14 +83,10 @@ import org.jetbrains.annotations.Nullable;
 @Provides(CommandProvider.class)
 public final class DefaultCommandProvider implements CommandProvider {
 
-  private static final CommandMeta.Key<Set<String>> ALIAS_KEY = CommandMeta.Key.of(new TypeToken<Set<String>>() {
-  }, "cloudnet:alias");
-  private static final CommandMeta.Key<String> DESCRIPTION_KEY = CommandMeta.Key.of(
-    String.class,
-    "cloudnet:description");
-  private static final CommandMeta.Key<String> DOCUMENTATION_KEY = CommandMeta.Key.of(
-    String.class,
-    "cloudnet:documentation");
+  private static final CloudKey<Set<String>> ALIAS_KEY = CloudKey.of("cloudnet:alias", new TypeToken<Set<String>>() {
+  });
+  private static final CloudKey<String> DESCRIPTION_KEY = CloudKey.of("cloudnet:description", String.class);
+  private static final CloudKey<String> DOCUMENTATION_KEY = CloudKey.of("cloudnet:documentation", String.class);
 
   private final CommandExceptionHandler exceptionHandler;
   private final CommandManager<CommandSource> commandManager;
@@ -100,16 +101,17 @@ public final class DefaultCommandProvider implements CommandProvider {
     @NonNull DefaultSuggestionProcessor suggestionProcessor,
     @NonNull DefaultCommandPreProcessor commandPreProcessor,
     @NonNull DefaultCommandPostProcessor commandPostProcessor,
-    @NonNull DefaultCaptionVariableReplacementHandler captionVariableReplacementHandler
+    @NonNull DefaultCaptionHandler captionHandler
   ) {
     // init command manager and annotation parser
     this.commandManager = commandManager;
-    this.commandManager.captionVariableReplacementHandler(captionVariableReplacementHandler);
+    this.commandManager.captionRegistry().registerProvider(captionHandler);
+    this.commandManager.captionFormatter(captionHandler);
     this.commandManager.parameterInjectorRegistry().registerInjectionService(injectionService);
     this.annotationParser = new AnnotationParser<>(
       this.commandManager,
       CommandSource.class,
-      parameters -> SimpleCommandMeta.empty());
+      _ -> CommandMeta.empty());
 
     // handle our @CommandAlias annotation and apply the found aliases
     this.annotationParser.registerBuilderModifier(
@@ -136,7 +138,7 @@ public final class DefaultCommandProvider implements CommandProvider {
     });
 
     // register pre- and post-processor to call our events
-    this.commandManager.commandSuggestionProcessor(suggestionProcessor);
+    this.commandManager.suggestionProcessor(suggestionProcessor);
     this.commandManager.registerCommandPreProcessor(commandPreProcessor);
     this.commandManager.registerCommandPostProcessor(commandPostProcessor);
 
@@ -153,7 +155,9 @@ public final class DefaultCommandProvider implements CommandProvider {
    */
   @Override
   public @NonNull List<String> suggest(@NonNull CommandSource source, @NonNull String input) {
-    return this.commandManager.suggest(source, input);
+    return this.commandManager.suggestionFactory().suggest(source, input).join().list().stream()
+      .map(Suggestion::suggestion)
+      .toList();
   }
 
   /**
@@ -161,7 +165,7 @@ public final class DefaultCommandProvider implements CommandProvider {
    */
   @Override
   public @NonNull CompletableFuture<?> execute(@NonNull CommandSource source, @NonNull String input) {
-    return this.commandManager.executeCommand(source, input).exceptionally(exception -> {
+    return this.commandManager.commandExecutor().executeCommand(source, input).exceptionally(exception -> {
       this.exceptionHandler.handleCommandExceptions(source, exception);
       // ensure that the new future still holds the exception
       throw exception instanceof CompletionException cex ? cex : new CompletionException(exception);
@@ -186,20 +190,21 @@ public final class DefaultCommandProvider implements CommandProvider {
     // just get the first command of the object as we don't want to register each method
     if (cloudCommand != null) {
       // check if there are any arguments, we don't want to register an empty command
-      if (cloudCommand.getArguments().isEmpty()) {
+      if (cloudCommand.nonFlagArguments().isEmpty()) {
         return;
       }
 
-      var permission = cloudCommand.getCommandPermission().toString();
+      var permission = cloudCommand.commandPermission().permissionString();
       // retrieve our own description processed by the @Description annotation
-      var description = cloudCommand.getCommandMeta().get(DESCRIPTION_KEY)
-        .orElseGet(() -> I18n.trans("command-no-description"));
+      var description = cloudCommand.commandMeta().getOrSupplyDefault(
+        DESCRIPTION_KEY,
+        () -> I18n.trans("command-no-description"));
       // retrieve the aliases processed by the @CommandAlias annotation
-      var aliases = cloudCommand.getCommandMeta().getOrDefault(ALIAS_KEY, Collections.emptySet());
+      var aliases = cloudCommand.commandMeta().getOrDefault(ALIAS_KEY, Collections.emptySet());
       // retrieve the documentation url processed by the @Documentation annotation
-      var documentation = cloudCommand.getCommandMeta().get(DOCUMENTATION_KEY).orElse(null);
+      var documentation = cloudCommand.commandMeta().getOrDefault(DOCUMENTATION_KEY, null);
       // get the name by using the first argument of the command
-      var name = StringUtil.toLower(cloudCommand.getArguments().get(0).getName());
+      var name = StringUtil.toLower(cloudCommand.nonFlagArguments().getFirst().name());
       // there is no other command registered with the given name, parse usage and register the command now
       this.registeredCommands.put(
         command.getClass().getClassLoader(),
@@ -258,7 +263,12 @@ public final class DefaultCommandProvider implements CommandProvider {
     console.addTabCompleteHandler(UUID.randomUUID(), new ConsoleTabCompleteHandler() {
       @Override
       public @NonNull Collection<String> completeInput(@NonNull String line) {
-        return DefaultCommandProvider.this.commandManager.suggest(CommandSource.console(), line);
+        return DefaultCommandProvider.this.commandManager.suggestionFactory().suggest(CommandSource.console(), line)
+          .join()
+          .list()
+          .stream()
+          .map(Suggestion::suggestion)
+          .toList();
       }
     });
   }
@@ -311,17 +321,18 @@ public final class DefaultCommandProvider implements CommandProvider {
    * Registers the default confirmation handling for commands, that need a confirmation before they are executed.
    */
   private void registerCommandConfirmation() {
-    // create a new confirmation manager
-    var confirmationManager = new CommandConfirmationManager<CommandSource>(
-      30L,
-      TimeUnit.SECONDS,
-      context -> context.getCommandContext().getSender().sendMessage(I18n.trans("command-confirmation-required")),
-      sender -> sender.sendMessage(I18n.trans("command-confirmation-no-requests")));
-    // register the confirmation manager to the command manager
-    confirmationManager.registerConfirmationProcessor(this.commandManager);
+    ConfirmationBuilderModifier.install(this.annotationParser);
+    var configuration = ConfirmationConfiguration.<CommandSource>builder()
+      .cache(CaffeineCache.of(Caffeine.newBuilder().expireAfterWrite(Duration.ofSeconds(30)).build()))
+      .noPendingCommandNotifier(sender -> sender.sendMessage(I18n.trans("command-confirmation-no-requests")))
+      .confirmationRequiredNotifier((sender, _) -> sender.sendMessage(I18n.trans("command-confirmation-required")))
+      .build();
+    var confirmationManager = ConfirmationManager.confirmationManager(configuration);
+    this.commandManager.registerCommandPostProcessor(confirmationManager.createPostprocessor());
     // register the command that is used for confirmations
     this.commandManager.command(this.commandManager.commandBuilder("confirm")
-      .handler(confirmationManager.createConfirmationExecutionHandler()));
+      .handler(confirmationManager.createExecutionHandler()));
+
     this.registeredCommands.put(
       this.getClass().getClassLoader(),
       new CommandInfo(
@@ -343,12 +354,12 @@ public final class DefaultCommandProvider implements CommandProvider {
     List<String> commandUsage = new ArrayList<>();
     for (var command : this.commandManager.commands()) {
       // the first argument is the root, check if it matches
-      var arguments = command.getArguments();
-      if (arguments.isEmpty() || !arguments.get(0).getName().equalsIgnoreCase(root)) {
+      var arguments = command.components();
+      if (arguments.isEmpty() || !arguments.getFirst().name().equalsIgnoreCase(root)) {
         continue;
       }
 
-      commandUsage.add(this.commandManager.commandSyntaxFormatter().apply(arguments, null));
+      commandUsage.add(this.commandManager.commandSyntaxFormatter().apply(null, arguments, null));
     }
 
     Collections.sort(commandUsage);
